--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,14 +1,17 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>GestaoEscolar</title>
+  <title>Gestão escolar</title>
   <%= stylesheet_link_tag    "application", :media => "all" %>
-  <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
 </head>
 <body>
-
-<%= yield %>
-
+  <% flash.each do |type, message| %>
+    <p class="<%= type %>">
+      <%= message %>
+    </p>
+  <% end %>
+  <%= yield %>
+  <%= javascript_include_tag "application" %>
 </body>
 </html>
