Cadastro de professores

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,1 +1,2 @@
-<%= link_to t("menu.teacher"), "/teachers" %>
+<%= link_to t("menu.teacher"), list_teacher_path %>
+<%= link_to t("menu.discipline"), list_discipline_path %>
