Cadastro de Disciplinas

--- a/app/views/disciplines/index.html.erb
+++ b/app/views/disciplines/index.html.erb
@@ -1,1 +1,24 @@
+<h1><%= t('titles.discipline.list') %></h1>
+
+<table>
+  <thead>
+    <tr>
+      <th>Nome</th>
+      <th>Professor</th>
+      <th>Ações</th>
+    </tr>
+  </thead>
+
+  <% @disciplines.each do |discipline| %>
+    <tr>
+      <td><%= discipline.name %></td>
+      <td><%= discipline.teacher.name %></td>
+      <td>
+        <%= link_to 'Editar',  edit_discipline_path(discipline.id) %>
+        <%= link_to 'Excluir', remove_discipline_path(discipline.id) %>
+      </td>
+    </tr>
+  <% end %>
+</table>
+
 <p><%= link_to t('titles.discipline.new'), new_discipline_path %></p>
