Cadastro de turmas

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,2 +1,3 @@
 <%= link_to t("menu.teacher"), list_teacher_path %>
 <%= link_to t("menu.discipline"), list_discipline_path %>
+<%= link_to t("menu.classroom"), list_classroom_path %>
