--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,3 +1,4 @@
 <%= link_to t("menu.teacher"), list_teacher_path %>
 <%= link_to t("menu.discipline"), list_discipline_path %>
 <%= link_to t("menu.classroom"), list_classroom_path %>
+<%= link_to t("menu.student"), list_student_path %>
