--- a/app/views/classrooms/index.html.erb
+++ b/app/views/classrooms/index.html.erb
@@ -1,22 +1,24 @@
 <h1><%= t('titles.classroom.list') %></h1>
-
-<table>
+<table class="table table-striped">
   <thead>
     <tr>
       <th>Nome</th>
+      <th>Criado em</th>
       <th>Ações</th>
     </tr>
   </thead>
-
-  <% @classrooms.each do |classroom| %>
-    <tr>
-      <td><%= classroom.name %></td>
-      <td>
-        <%= link_to 'Editar',  edit_classroom_path(classroom.id) %>
-        <%= link_to 'Excluir', remove_classroom_path(classroom.id) %>
-      </td>
-    </tr>
-  <% end %>
+  <tbody>
+    <% @classrooms.each do |classroom| %>
+      <tr>
+        <td><%= classroom.name %></td>
+        <td><%= classroom.created_at %></td>
+        <td>
+          <%= link_to 'Editar',  edit_classroom_path(classroom.id), :class => 'btn btn-mini' %>
+          <%= link_to 'Excluir', remove_classroom_path(classroom.id), :class => 'btn btn-mini btn-danger'%>
+        </td>
+      </tr>
+    <% end %>
+  </tbody>
 </table>
 
-<p><%= link_to t('titles.classroom.new'), new_classroom_path %></p>
+<%= link_to t('titles.classroom.new'), new_classroom_path, :class => 'btn btn-primary' %>
