Feature for remove any disciplines

--- a/app/views/classroom_disciplines/create.js.erb
+++ b/app/views/classroom_disciplines/create.js.erb
@@ -3,4 +3,4 @@
 <% else %>
   alert("<%= j @classroom_discipline.errors.full_messages.join("\n") %>");
 <% end %>
-$("#disc_adding").html("<%= j render 'classrooms/disc_add' %>");
+//$("#form_adding").html("<%= j render 'classrooms/disc_add' %>");
