--- a/app/views/classrooms/_disc_list.html.erb
+++ b/app/views/classrooms/_disc_list.html.erb
@@ -1,10 +1,10 @@
 <% @classroom_disciplines.each do |disc| %>
   <tr>
     <td><%= disc.discipline.name %></td>
-    <td><%= disc.discipline.teacher.name %></td>
+    <td><%= disc.teacher.name %></td>
     <td>
       <%= link_to 'Editar', nil, :class => 'btn btn-mini' %>
-      <%= link_to "Excluir", nil, confirm: "Erase address?",
+      <%= link_to "Excluir", remove_classroom_discipline_path(disc.id), confirm: "Excluir Disciplina?",
         method: :delete, remote: true, :class => 'btn btn-mini btn-danger' %></td>
   </tr>
 <% end %>
