--- a/app/views/classrooms/show.html.erb
+++ b/app/views/classrooms/show.html.erb
@@ -17,7 +17,7 @@
       <th><%= t('form.classroom_discipline.teacher') %></th>
     </tr>
   </thead>
-  <tbody id="disc_adding">
+  <tbody id="form_adding">
     <%= render :partial => 'disc_add' %>
   </tbody>
   <tbody id="disc_listing">
