--- a/app/views/classrooms/_disc_add.html.erb
+++ b/app/views/classrooms/_disc_add.html.erb
@@ -1,18 +1,15 @@
-<%= form_for @classroom_discipline, remote: true do |f| %>
+<%= form_for @classroom_discipline, :url => new_classroom_discipline_path , remote: true do |f| %>
 <tr>
   <td>
     <%= f.collection_select :discipline_id, Discipline.all, :id, :name,
         :include_blank => true %>
   </td>
   <td>
-    <select name="teacher_id" id="teacher_id">
-      <option value="1">Teacher 1</option>
-      <option value="2">Teacher 2</option>
-      <option value="3">Teacher 3</option>
-    </select>
+    <%= f.collection_select :teacher_id, Teacher.all, :id, :name,
+        :include_blank => true %>
   </td>
   <td>
-    <%= f.submit %>
+    <%= f.submit nil, :class => 'btn btn-primary' %>
   </td>
 </tr>
 <% end %>
