--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -33,30 +33,29 @@
           <div class="span12">
 
             <div class="alert alert-success">
+              <button type="button" class="close" data-dismiss="alert">&times;</button>
               <% flash.each do |type, message| %>
               <p class="<%= type %>">
                 <%= message %>
               </p>
               <% end %>
             </div>
-
-
             <%= yield %>
           </div>
         </div>
       </div>
     </div>
-
-    <div class="row-fluid">
-      <div class="span12">
-        <div class="well">
-          <p align="center">
-            <strong>Painel desenvolvido pela Editora Devmedia</strong>
-          </p>
+    <footer>
+      <div class="row-fluid">
+        <div class="span12">
+          <div class="well">
+            <p align="center">
+              <strong>Gestão Escolar - v0.1</strong>
+            </p>
+          </div>
         </div>
       </div>
-    </div>
+    </footer>
   </div>
-
 </body>
 </html>
