--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,6 +25,8 @@
             <li><%= link_to t("menu.teacher"), list_teacher_path%></li>
             <li><%= link_to t("menu.discipline"), list_discipline_path%></li>
             <li><%= link_to t("menu.student"), list_student_path %></li>
+            <li class="nav-header">Relatórios</li>
+            <li><%= link_to t("menu.report"), new_report_path %></li>
           </ul>
         </div>
       </div>
