--- a/app/views/classrooms/_disc_add.html.erb
+++ b/app/views/classrooms/_disc_add.html.erb
@@ -1,6 +1,7 @@
 <%= form_for @classroom_discipline, :url => new_classroom_discipline_path , remote: true do |f| %>
 <tr>
   <td>
+    <%= f.hidden_field :classroom_id, :value => @classroom.id %>
     <%= f.collection_select :discipline_id, Discipline.all, :id, :name,
         :include_blank => true %>
   </td>
