--- a/app/views/classrooms/_form.html.erb
+++ b/app/views/classrooms/_form.html.erb
@@ -1,7 +1,7 @@
 <%= form_for record, :url => route, :html => { :class => 'form-horizontal' } do |f| %>
 
 <fieldset>
-  <legend><%= controller.action_name.capitalize %> Classroom</legend>
+  <legend>Cadastro de turmas</legend>
 
   <div class="control-group">
     <%= f.label :name, t("form.classroom.name"), :class => 'control-label' %>
@@ -12,7 +12,7 @@
 
   <div class="form-actions">
     <%= f.submit nil, :class => 'btn btn-primary' %>
-    <%= link_to 'Cancel', list_classroom_path, :class => 'btn' %>
+    <%= link_to 'Cancelar', list_classroom_path, :class => 'btn' %>
   </div>
 </fieldset>
 
